@@ -1,34 +1,33 @@
 /*
- *      ____.____  __.____ ___     _____
- *     |    |    |/ _|    |   \   /  _  \ ______ ______
- *     |    |      < |    |   /  /  /_\  \\____ \\____ \
- * /\__|    |    |  \|    |  /  /    |    \  |_> >  |_> >
- * \________|____|__ \______/   \____|__  /   __/|   __/
- *                  \/                  \/|__|   |__|
+ *       ____.____  __.____ ___     _____
+ *      |    |    |/ _|    |   \   /  _  \ ______ ______
+ *      |    |      < |    |   /  /  /_\  \\____ \\____ \
+ *  /\__|    |    |  \|    |  /  /    |    \  |_> >  |_> >
+ *  \________|____|__ \______/   \____|__  /   __/|   __/
+ *                   \/                  \/|__|   |__|
  *
- * Copyright (c) 2014-2015 Paul "Marunjar" Pretsch
+ *  Copyright (c) 2014-2018 Paul "Marunjar" Pretsch
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ *  This program is free software: you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation, either version 3 of the License, or
+ *  (at your option) any later version.
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program.  If not, see <http://www.gnu.org/licenses/>
+ *
  */
 
 package org.voidsink.anewjkuapp.activity;
 
 import android.Manifest;
 import android.accounts.Account;
-import android.annotation.TargetApi;
 import android.content.Context;
-import android.content.DialogInterface;
 import android.content.Intent;
 import android.content.pm.PackageManager;
 import android.net.Uri;
@@ -37,7 +36,6 @@ import android.os.Bundle;
 import android.provider.Settings;
 import android.support.annotation.NonNull;
 import android.support.design.widget.NavigationView;
-import android.support.v4.app.ActivityCompat;
 import android.support.v4.app.Fragment;
 import android.support.v4.app.FragmentManager;
 import android.support.v4.app.FragmentTransaction;
@@ -45,7 +43,6 @@ import android.support.v4.content.ContextCompat;
 import android.support.v4.view.GravityCompat;
 import android.support.v4.widget.DrawerLayout;
 import android.support.v7.app.ActionBar;
-import android.support.v7.app.AlertDialog;
 import android.util.Log;
 import android.view.Menu;
 import android.view.MenuItem;
@@ -63,7 +60,6 @@ import org.voidsink.anewjkuapp.base.BaseFragment;
 import org.voidsink.anewjkuapp.base.StackedFragment;
 import org.voidsink.anewjkuapp.base.ThemedActivity;
 import org.voidsink.anewjkuapp.calendar.CalendarContractWrapper;
-import org.voidsink.anewjkuapp.calendar.CalendarUtils;
 import org.voidsink.anewjkuapp.fragment.AssessmentFragment;
 import org.voidsink.anewjkuapp.fragment.CalendarFragment;
 import org.voidsink.anewjkuapp.fragment.CalendarFragment2;
@@ -79,6 +75,8 @@ import org.voidsink.anewjkuapp.utils.AppUtils;
 import org.voidsink.anewjkuapp.utils.Consts;
 
 import de.cketti.library.changelog.ChangeLog;
+import pub.devrel.easypermissions.AfterPermissionGranted;
+import pub.devrel.easypermissions.EasyPermissions;
 
 public class MainActivity extends ThemedActivity {
 
@@ -88,9 +86,8 @@ public class MainActivity extends ThemedActivity {
 
     private static final String TAG = MainActivity.class.getSimpleName();
 
-    private static final int MY_PERMISSION_READ_CALENDAR = 0;
-    private static final int MY_PERMISSION_WRITE_CALENDAR = 1;
-    private static final int MY_PERMISSION_ACCOUNTS = 2;
+    private static final int PERMISSIONS_REQUEST_ACCOUNT = 2;
+    private static final String[] ACCOUNT_PERMISSIONS = {Manifest.permission.GET_ACCOUNTS};
 
     /**
      * Fragment managing the behaviors, interactions and presentation of the
@@ -99,23 +96,6 @@ public class MainActivity extends ThemedActivity {
     private DrawerLayout mDrawerLayout;
     private DrawerLayout.DrawerListener mDrawerListener;
     private NavigationView mNavigationView;
-    private boolean mUserLearnedDrawer;
-
-    @TargetApi(Build.VERSION_CODES.JELLY_BEAN_MR2)
-    private static void StartCreateAccount(Context context) {
-        if ((android.os.Build.VERSION.SDK_INT >= Build.VERSION_CODES.M) || (ContextCompat.checkSelfPermission(context, Manifest.permission.GET_ACCOUNTS) == PackageManager.PERMISSION_GRANTED)) {
-            if (android.os.Build.VERSION.SDK_INT >= Build.VERSION_CODES.JELLY_BEAN_MR2) {
-                context.startActivity(new Intent(Settings.ACTION_ADD_ACCOUNT)
-                        .putExtra(Settings.EXTRA_ACCOUNT_TYPES,
-                                new String[]{KusssAuthenticator.ACCOUNT_TYPE}));
-            } else {
-                context.startActivity(new Intent(Settings.ACTION_ADD_ACCOUNT)
-                        .putExtra(
-                                Settings.EXTRA_AUTHORITIES,
-                                new String[]{CalendarContractWrapper.AUTHORITY()}));
-            }
-        }
-    }
 
     private static void StartMyCurricula(Context context) {
         //
@@ -157,61 +137,6 @@ public class MainActivity extends ThemedActivity {
 
         setContentView(R.layout.activity_main);
 
-        if (ContextCompat.checkSelfPermission(this, Manifest.permission.READ_CALENDAR) != PackageManager.PERMISSION_GRANTED) {
-            if (ActivityCompat.shouldShowRequestPermissionRationale(this, Manifest.permission.READ_CALENDAR)) {
-                new AlertDialog.Builder(this)
-                        .setMessage(getString(R.string.alert_permission_read_calendar))
-                        .setPositiveButton(R.string.button_ok, null)
-                        .setCancelable(false)
-                        .setOnDismissListener(new DialogInterface.OnDismissListener() {
-                            @Override
-                            public void onDismiss(DialogInterface dialogInterface) {
-                                if (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.permission.READ_CALENDAR) != PackageManager.PERMISSION_GRANTED) {
-                                    ActivityCompat.requestPermissions(MainActivity.this, new String[]{Manifest.permission.READ_CALENDAR}, MY_PERMISSION_READ_CALENDAR);
-                                }
-                            }
-                        }).show();
-            } else {
-                ActivityCompat.requestPermissions(this, new String[]{Manifest.permission.READ_CALENDAR}, MY_PERMISSION_READ_CALENDAR);
-            }
-        }
-        if (ContextCompat.checkSelfPermission(this, Manifest.permission.WRITE_CALENDAR) != PackageManager.PERMISSION_GRANTED) {
-            if (ActivityCompat.shouldShowRequestPermissionRationale(this, Manifest.permission.WRITE_CALENDAR)) {
-                new AlertDialog.Builder(this)
-                        .setMessage(getString(R.string.alert_permission_write_calendar))
-                        .setPositiveButton(R.string.button_ok, null)
-                        .setCancelable(false)
-                        .setOnDismissListener(new DialogInterface.OnDismissListener() {
-                            @Override
-                            public void onDismiss(DialogInterface dialogInterface) {
-                                if (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.permission.WRITE_CALENDAR) != PackageManager.PERMISSION_GRANTED) {
-                                    ActivityCompat.requestPermissions(MainActivity.this, new String[]{Manifest.permission.WRITE_CALENDAR}, MY_PERMISSION_WRITE_CALENDAR);
-                                }
-                            }
-                        }).show();
-            } else {
-                ActivityCompat.requestPermissions(this, new String[]{Manifest.permission.WRITE_CALENDAR}, MY_PERMISSION_WRITE_CALENDAR);
-            }
-        }
-        if ((android.os.Build.VERSION.SDK_INT < Build.VERSION_CODES.M) && (ContextCompat.checkSelfPermission(this, Manifest.permission.GET_ACCOUNTS) != PackageManager.PERMISSION_GRANTED)) {
-            if (ActivityCompat.shouldShowRequestPermissionRationale(this, Manifest.permission.GET_ACCOUNTS)) {
-                new AlertDialog.Builder(this)
-                        .setMessage(getString(R.string.alert_permission_get_accounts))
-                        .setPositiveButton(R.string.button_ok, null)
-                        .setCancelable(false)
-                        .setOnDismissListener(new DialogInterface.OnDismissListener() {
-                            @Override
-                            public void onDismiss(DialogInterface dialogInterface) {
-                                if (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.permission.GET_ACCOUNTS) != PackageManager.PERMISSION_GRANTED) {
-                                    ActivityCompat.requestPermissions(MainActivity.this, new String[]{Manifest.permission.GET_ACCOUNTS}, MY_PERMISSION_ACCOUNTS);
-                                }
-                            }
-                        }).show();
-            } else {
-                ActivityCompat.requestPermissions(this, new String[]{Manifest.permission.GET_ACCOUNTS}, MY_PERMISSION_ACCOUNTS);
-            }
-        }
-
         // do things if new version was installed
         AppUtils.doOnNewVersion(this);
 
@@ -226,18 +151,12 @@ public class MainActivity extends ThemedActivity {
         });
 
         // set up drawer
-        mUserLearnedDrawer = PreferenceWrapper.getUserLearnedDrawer(this);
-
-        mDrawerLayout = (DrawerLayout) findViewById(R.id.drawer_layout);
+        mDrawerLayout = findViewById(R.id.drawer_layout);
 
         mDrawerListener = new DrawerLayout.SimpleDrawerListener() {
             @Override
             public void onDrawerOpened(View drawerView) {
-                if (!mUserLearnedDrawer) {
-                    PreferenceWrapper.setPrefUserLearnedDrawer(MainActivity.this, true);
-                }
-
-                TextView mDrawerUser = (TextView) mNavigationView.getHeaderView(0).findViewById(R.id.drawer_user);
+                TextView mDrawerUser = mNavigationView.getHeaderView(0).findViewById(R.id.drawer_user);
 
                 if (mDrawerUser != null) {
                     if ((android.os.Build.VERSION.SDK_INT < Build.VERSION_CODES.M) && (ContextCompat.checkSelfPermission(MainActivity.this, Manifest.permission.GET_ACCOUNTS) != PackageManager.PERMISSION_GRANTED)) {
@@ -262,7 +181,7 @@ public class MainActivity extends ThemedActivity {
                             mDrawerUser.setOnClickListener(new View.OnClickListener() {
                                 @Override
                                 public void onClick(View v) {
-                                    MainActivity.StartCreateAccount(MainActivity.this);
+                                    startCreateAccount();
                                 }
                             });
                         } else {
@@ -281,7 +200,7 @@ public class MainActivity extends ThemedActivity {
             }
         };
 
-        mNavigationView = (NavigationView) findViewById(R.id.nav_view);
+        mNavigationView = findViewById(R.id.nav_view);
         if (mNavigationView != null) {
             setupDrawerContent(mNavigationView);
         }
@@ -300,40 +219,40 @@ public class MainActivity extends ThemedActivity {
             cl.getLogDialog().show();
         }
 
-        if (AppUtils.getAccount(this) == null) {
-            StartCreateAccount(this);
-        }
+        startCreateAccount();
 
         Log.d(TAG, "onCreate finished");
     }
 
+    @AfterPermissionGranted(PERMISSIONS_REQUEST_ACCOUNT)
+    private void startCreateAccount() {
+        if (((android.os.Build.VERSION.SDK_INT >= Build.VERSION_CODES.M)) || (EasyPermissions.hasPermissions(this, Manifest.permission.GET_ACCOUNTS))) {
+            if (AppUtils.getAccount(this) == null) {
+                if (android.os.Build.VERSION.SDK_INT >= Build.VERSION_CODES.JELLY_BEAN_MR2) {
+                    this.startActivity(new Intent(Settings.ACTION_ADD_ACCOUNT)
+                            .putExtra(Settings.EXTRA_ACCOUNT_TYPES,
+                                    new String[]{KusssAuthenticator.ACCOUNT_TYPE}));
+                } else {
+                    this.startActivity(new Intent(Settings.ACTION_ADD_ACCOUNT)
+                            .putExtra(Settings.EXTRA_AUTHORITIES,
+                                    new String[]{CalendarContractWrapper.AUTHORITY()}));
+                }
+            }
+        } else {
+            EasyPermissions.requestPermissions(
+                    this,
+                    getString(R.string.alert_permission_get_accounts),
+                    PERMISSIONS_REQUEST_ACCOUNT,
+                    ACCOUNT_PERMISSIONS);
+        }
+    }
+
     @Override
     public void onRequestPermissionsResult(int requestCode, @NonNull String[] permissions, @NonNull int[] grantResults) {
-        switch (requestCode) {
-            case MY_PERMISSION_READ_CALENDAR:
-            case MY_PERMISSION_WRITE_CALENDAR:
-                if (grantResults.length > 0 && grantResults[0] == PackageManager.PERMISSION_GRANTED) {
-                    Account account = AppUtils.getAccount(this);
-                    CalendarUtils.createCalendarsIfNecessary(this, account);
-                    Log.d(TAG, String.format("Permission granted: %d", requestCode));
-                } else {
-                    Log.d(TAG, String.format("Permission denied: %d", requestCode));
-                }
-                return;
-            case MY_PERMISSION_ACCOUNTS: {
-                if ((android.os.Build.VERSION.SDK_INT >= Build.VERSION_CODES.M) || (grantResults.length > 0 && grantResults[0] == PackageManager.PERMISSION_GRANTED)) {
-                    if (AppUtils.getAccount(this) == null) {
-                        StartCreateAccount(this);
-                    }
-                    Log.d(TAG, String.format("Permission granted: %d", requestCode));
-                } else {
-                    Log.d(TAG, String.format("Permission denied: %d", requestCode));
-                }
-                return;
-            }
-            default:
-                super.onRequestPermissionsResult(requestCode, permissions, grantResults);
-        }
+        super.onRequestPermissionsResult(requestCode, permissions, grantResults);
+
+        // EasyPermissions handles the request result.
+        EasyPermissions.onRequestPermissionsResult(requestCode, permissions, grantResults, this);
     }
 
     private Fragment attachFragmentById(int id, boolean saveLastFragment) {
@@ -361,8 +280,6 @@ public class MainActivity extends ThemedActivity {
                 new NavigationView.OnNavigationItemSelectedListener() {
                     @Override
                     public boolean onNavigationItemSelected(@NonNull MenuItem menuItem) {
-                        checkNavItem(menuItem);
-
                         switch (menuItem.getItemId()) {
                             case R.id.nav_settings: {
                                 startActivity(new Intent(MainActivity.this, SettingsActivity.class));
@@ -381,10 +298,6 @@ public class MainActivity extends ThemedActivity {
                         return menuItem.isCheckable();
                     }
                 });
-
-        if (!mUserLearnedDrawer) {
-            mDrawerLayout.openDrawer(navigationView);
-        }
     }
 
     private Fragment attachFragment(Intent intent, Bundle savedInstanceState,
@@ -486,7 +399,7 @@ public class MainActivity extends ThemedActivity {
                     }
                 }
 
-                Fragment f = startFragment.newInstance();
+                Fragment f = startFragment.getConstructor().newInstance();
 
                 Bundle b = new Bundle();
                 b.putCharSequence(Consts.ARG_FRAGMENT_TITLE, menuItem.getTitle());
@@ -526,48 +439,7 @@ public class MainActivity extends ThemedActivity {
     protected void onInitActionBar(ActionBar actionBar) {
         super.onInitActionBar(actionBar);
 
-        actionBar.setNavigationMode(ActionBar.NAVIGATION_MODE_STANDARD);
         actionBar.setDisplayShowTitleEnabled(true);
-
-        if (mNavigationView != null) {
-            Fragment f = getSupportFragmentManager().findFragmentByTag(Consts.ARG_FRAGMENT_TAG);
-            if (f instanceof StackedFragment) {
-                int id = ((StackedFragment) f).getId(this);
-                if (id > 0) {
-                    MenuItem menuItem = mNavigationView.getMenu().findItem(id);
-                    checkNavItem(menuItem);
-                }
-            }
-        }
-    }
-
-    private void uncheckMenuItems(Menu menu) {
-        if (menu != null) {
-            for (int i = 0; i < menu.size(); i++) {
-                MenuItem item = menu.getItem(i);
-
-                if (item.isCheckable()) {
-                    item.setChecked(false);
-                }
-
-                if (item.hasSubMenu()) {
-                    uncheckMenuItems(item.getSubMenu());
-                }
-            }
-        }
-    }
-
-    private void checkNavItem(MenuItem menuItem) {
-        /*if (mNavigationView != null) {
-            if (menuItem != null) {
-                if (menuItem.isCheckable() && !menuItem.isChecked()) {
-                    // iterate over all items and uncheck them, groups doesn't work with submenus for grouping entries in NavigationView
-                    uncheckMenuItems(mNavigationView.getMenu());
-
-                    menuItem.setChecked(true);
-                }
-            }
-        }*/
     }
 
     @Override
@@ -614,5 +486,12 @@ public class MainActivity extends ThemedActivity {
         mDrawerLayout.removeDrawerListener(mDrawerListener);
 
         Analytics.clearScreen(this);
+    }
+
+    @Override
+    protected void onResume() {
+        super.onResume();
+
+        //startCreateAccount();
     }
 }
